--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,37 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext.ReporterType = org.jlleitschuh.gradle.ktlint.reporter.ReporterType
+apply plugin: 'org.jlleitschuh.gradle.ktlint'
+
+ktlint {
+    version = "0.34.2"
+    debug = true
+    verbose = true
+    android = true
+    outputToConsole = true
+    reporters = [ReporterType.PLAIN, ReporterType.CHECKSTYLE]
+    ignoreFailures = false
+    enableExperimentalRules = true
+    // additionalEditorconfigFile = file("/some/additional/.editorconfig")
+    kotlinScriptAdditionalPaths {
+        // include fileTree("scripts/")
+    }
+    filter {
+        exclude("**/generated/**")
+        include("**/kotlin/**")
+    }
+}
+
 buildscript {
     ext.kotlin_version = "1.3.72"
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+        dependencies {
+            classpath "org.jlleitschuh.gradle:ktlint-gradle:8.2.0"
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
@@ -18,10 +46,11 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
     }
+}
+
+subprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
 }
 
 task clean(type: Delete) {
